src/main/java/studio/example/reservation/error/NoSuchMemberByEmpNoException.java
package studio.example.reservation.error;

public class NoSuchMemberByEmpNoException extends  RuntimeException{
    public NoSuchMemberByEmpNoException(String message) {
        super(message);
    }

    public NoSuchMemberByEmpNoException(String message, Throwable cause) {
        super(message, cause);
    }
}
